src/Assignment_04/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Training_Session__c</fullName>
        <label>Training Session</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email_Address_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX (UPPER (Email__c ) ,&quot;^[A-Z0-9.%+-/!#$%&amp;&apos;*=?^`{|}~]+@[A-Z0-9.-]+\\.[A-Z]{2,25}$&quot;))</errorConditionFormula>
        <errorMessage>Enter the Valid Email</errorMessage>
    </validationRules>
</CustomObject>